initial implementation with both spring chatclient and chatmodel